# pygamehack

./: .gitignore  .gitmodules  Hack.cpp  Hack.h  LICENSE.txt  MainMenuTest.PTR  MainMenuTest.PTR.results.1  Proc.cpp  Proc.h  README.md  TestProgram.cpp  brawl_structs.py  brawlhalla_offsets.py  brawlhalla_skins.py  dev.py  pygamehack.cpp  pygamehack.vcxproj  pygamehack.vcxproj.filters  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  t.py
.github/workflows/: publish.yml  push.yml
pygamehack/: __init__.py  code.py  reclassnet.py  struct.py  struct_file.py  struct_meta.py  struct_parser.py  variable.py
pygamehack/gdb/: __init__.py  gdb.py  io.py  parser.py
pygamehack_extensions/: haxe_flash.py  raw_array.py  raw_string.py
pygamehack_gui/: __init__.py  __main__.py  address_view.py  aob_discover_view.py  app_view.py  class_view.py  log_view.py  main.py  process_dialog.py  pycheatengine.py  variable_view.py
pygamehack_utils/: __init__.py  __main__.py  aob.py  cli.py  debug_view.py  debugger.py  hackstruct.py  hackstruct_file.py  hackstruct_meta.py  instruction.py  parser.py  pointer_scan_file_ce.py  type_helpers.py  variable.py
src/: Address.cpp  Address.h  Buffer.cpp  Buffer.h  CMakelists.txt  Hack.cpp  Hack.h  Instruction.cpp  Instruction.h  Process.cpp  Process.h  Variable.cpp  Variable.h  config.h  pygamehack.cpp
tests/: CMakeLists.txt  TestProgram.cpp  conftest.py  test_buffer.py  test_definition.py  test_hack.py
tests/test_program/: CMakeLists.txt  MarkerAddress-32.txt  MarkerAddress-64.txt  TestProgram.cpp  TestProgram2.cpp
(+45 files in other folders)
